--- a/views/user-pages/userDashboardOrderPage.ejs
+++ b/views/user-pages/userDashboardOrderPage.ejs
@@ -59,7 +59,7 @@
                     <% } %>
                     <% if (paginatedOrder[0]?.orders[0]?.paymentStatus === 'paid') { %>
                     <div class="col-12 d-flex justify-content-end align-items-center">
-                      <a href="/generate-invoice/<%= paginatedOrder[0]?.orders[0]?._id %>" class="border-0 bg-black text-white font-size-bold m-0 outline-none px-3 py-2 rounded-1 text-decoration-none " style="cursor: pointer;"><i class="fa-bounce fa-solid fa-download pe-2 text-primary"></i>Download Invoice</a>
+                      <a href="/user-download-Invoice/<%= paginatedOrder[0]?._id %>" class="border-0 bg-black text-white font-size-bold m-0 outline-none px-3 py-2 rounded-1 text-decoration-none " style="cursor: pointer;"><i class="fa-solid fa-eye fa-bounce pe-2 text-primary"></i>View Invoice</a>
                     </div>
                     <% } %>
                   </div>
@@ -90,7 +90,7 @@
               <% } %>
               <!-- tax details  -->
               <% if(paginatedOrder?.length > 0){ %>
-              <div class="row border rounded-3 p-0 mb-3">
+              <div class="row border rounded-3 p-0 mb-3 ">
                 <div class="col-sm-12 col-md-12 col-lg-12 m-0 p-0">
                   <a class="btn w-100 border-0 m-0 p-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <p class="font-size-small-bold text-primary m-0 py-2 fst-italic">See GST & tax informations <span class="font-size-bold">&gt;&gt;</span> </p>
