--- a/views/admin-pages/adminAddCategoryPage.ejs
+++ b/views/admin-pages/adminAddCategoryPage.ejs
@@ -5,6 +5,13 @@
 
   <!-- including admin nav  -->
   <%- include('../../partials/admin-partials/admin-nav-login.ejs') %>
+  <% if (message) { %>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        toastMessage("<%= message %>");
+      });
+    </script>
+    <% } %>
 
   <section>
     <div class="container-fluid">
@@ -21,13 +28,6 @@
           <div class="loginDiv col">
             <h4 class="text-center text-black font-size-bold-title">Add a category</h4>
             <form id="categoryForm" action="/admin-add-category" method="POST">
-
-              <!-- Display the message if category already exists start -->
-              <!-- <% if (message) { %>
-              <h6 id="flash" class="text-center text-danger animate__animated animate__flash font-size"><%= message %></h6>
-              <% } %> -->
-              <!-- Display the message if category already exists end -->
-
               <div class="mb-3 form-group">
                 <label for="category" class="form-label text-black font-size">Category name</label>
                 <input type="text" class="form-control bg-whit text-black font-size availability-check" id="category" name="category" required>
@@ -38,7 +38,7 @@
 
               <div class="d-flex justify-content-center align-items-center flex-wrap">
                 <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-                  <a class="btn btn-dark my-3 px-5 py-2 text-white font-size-bold" href="/admin-product-management">cancel</a>
+                  <a class="btn btn-dark my-3 px-5 py-2 text-white font-size-bold" href="/admin-category-management">cancel</a>
                 </div>
                 <button type="submit" class="btn btn-danger my-3 px-5 py-2 text-white font-size-bold submitButton">add category</button>
               </div>
