--- a/views/admin-pages/adminAddCouponPage.ejs
+++ b/views/admin-pages/adminAddCouponPage.ejs
@@ -10,7 +10,7 @@
     <div class="container-fluid">
       <div class="row d-flex justify-content-between p-2">
         <div class="col-sm-12 col-md-12 col-lg-6 d-flex flex-column justify-content-center align-items-center border rounded-3 p-5">
-          <p class="font-size-bold text-danger">Existing colors</p>
+          <p class="font-size-bold text-danger">Existing coupons</p>
 
           <% if (message) { %>
             <script>
@@ -37,7 +37,7 @@
               </div>
 
               <div class="mb-3 form-group">
-                <label for="couponDiscount" class="form-label text-black font-size">Coupon name</label>
+                <label for="couponDiscount" class="form-label text-black font-size">Coupon value ( % )</label>
                 <input type="text" class="form-control bg-white text-black font-size availability-check" id="couponDiscount" name="couponDiscount" required>
               </div>
 
