--- a/views/user-pages/userListAllProductsPage.ejs
+++ b/views/user-pages/userListAllProductsPage.ejs
@@ -1,7 +1,7 @@
 <!-- including admin head  -->
 <%- include('../../partials/user-partials/user-head.ejs') %>
 
-<body class="">
+<body>
 
   <!-- including admin nav  -->
   <%- include('../../partials/user-partials/user-nav.ejs') %>
