--- a/views/admin-pages/adminCategoryManagementPage.ejs
+++ b/views/admin-pages/adminCategoryManagementPage.ejs
@@ -5,6 +5,13 @@
 
   <!-- including admin nav  -->
   <%- include('../../partials/admin-partials/admin-nav.ejs') %>
+  <% if (message) { %>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        toastMessage("<%= message %>");
+      });
+    </script>
+    <% } %>
 
   <section>
     <div class="row d-flex m-0 p-0">
@@ -15,14 +22,6 @@
         <div class="top-bar d-flex justify-content-between align-items-center p-2">
 
           <h6 class="text-primary">Category Management</h6>
-
-          <!-- category Deleted flashing start -->
-          <% if (message) { %>
-          <h6 id="flash" class="text-center text-success animate__animated animate__flash font-size mt-5"><%= message %> : <%= item %></h6>
-          <% } %>
-          <!-- category Deleted flashing end -->
-
-
           <!-- add Category button start -->
           <button type="submit" class="btn btn-primary text-white text-center ">
             <a class="text-white text-decoration-none p-0 font-size" href="/admin-add-category">Add Category</a>
@@ -39,7 +38,6 @@
               <th class="table-white text-black bg-light text-center" scope="col">Status</th>
               <th class="table-white text-black bg-light text-center" scope="col">Action</th>
               <th class="table-white text-black bg-light text-center" scope="col">Edit</th>
-              <th class="table-white text-black bg-light text-center" scope="col">Delete</th>
             </tr>
           </thead>
           <tbody>
@@ -84,11 +82,6 @@
               <td class="text-black table-white text-start">
                 <form action="/admin-edit-category/<%- data._id %>" method="get" class="text-center">
                   <button type="submit" class="text-white font-size btn btn-primary px-3 py-0" onclick="return confirm('Are you sure you want to edit <%=data.category%>?')">edit</button>
-                </form>
-              </td>
-              <td class="text-black table-white text-start">
-                <form action="/admin-delete-category/<%- data._id %>" method="get" class="text-center">
-                  <button type="submit" class="text-white font-size btn btn-danger px-3 py-0" onclick="return confirm('Are you sure you want to delete <%=data.category%>?')">delete</button>
                 </form>
               </td>
             </tr>
