fix : quantity added when whole order is cancelled

--- a/partials/user-partials/user-sideNav.ejs
+++ b/partials/user-partials/user-sideNav.ejs
@@ -8,9 +8,9 @@
       <a class="text-black text-decoration-none" href="/user-dashboard-address-book">
         <p class="ps-3">My address book</p>
       </a>
-      <!-- <a class="text-black text-decoration-none" href="#">
-        <p class="ps-3">My payment options</p>
-      </a> -->
+      <a class="text-black text-decoration-none" href="/user-dashboard-wallet">
+        <p class="ps-3">My wallet</p>
+      </a>
       <a class="text-black text-decoration-none" href="/user-dashboard-cart">
         <p class="ps-3">My cart</p>
       </a>
